# studentInfo-barcodescanner

./: .gitignore  .gitmodules  Backend.cpp  Backend.h  CMakeLists.txt  interface.cpp  interface.h  main.cpp  mainWindows.qml  mainwindow.ui
